Public api/supporters and followers (#942)
* Add followers and supporters count to talents endpoint

* Add followers endpoint to the public API

* Add endpoint to fetch user followers

* Add endpoint to fetch user supporters
