# app/blueprints/api/talent_blueprint.rb
@@ -6,4 +6,24 @@ class API::TalentBlueprint < Blueprinter::Base
       user.wallet_id
     end
   end
+
+  view :detailed do
+    include_view :normal
+
+    field :supporters_count do |user, _options|
+      user.supporters.count
+    end
+
+    field :supporting_count do |user, _options|
+      user.portfolio.count
+    end
+
+    field :followers_count do |user, _options|
+      user.followers.count
+    end
+
+    field :following_count do |user, _options|
+      user.following.count
+    end
+  end
 end
